# chatbot

./: .env.example  .gitattributes  .gitignore  README.md  TODO.md  pyproject.toml  test_normalizer.py
code/: .env.example  README.md  pyproject.toml
code/app/: __init__.py  dependencies.py  main.py
code/app/api/routes/: chat.py  health.py
code/app/core/: config.py  errors.py
code/app/generation/: __init__.py  llm.py  prompt.py
code/app/ingestion/: chunker.py  document_loader.py  hierarchy.py  pipeline.py
code/app/reranking/: __init__.py  reranker.py
code/app/retrieval/: __init__.py  context_selector.py  elasticsearch_store.py  hybrid_search.py  interfaces.py  qdrant_store.py
code/app/routing/: __init__.py  domain_router.py
code/app/schemas/: __init__.py  chat.py  retrieval.py
code/app/services/: rag_service.py
code/docker/: Dockerfile  docker-compose.yml
code/tests/: test_context_selector.py  test_router.py
config/: app_template.enterprise.yaml  knowledge_tree.enterprise.yaml
docs/: 00-product-scope.md  01-architecture.md  02-data-flow.md  03-ingestion-flow.md  04-retrieval-flow.md  05-auth-tenancy.md  06-deployment.md  07-tradeoffs.md  08-api-surface.md
evaluation/: __init__.py  config.py  dataset.py  runner.py
evaluation_data/: golden_qa.jsonl
infra/: README.md
migrations/: env.py
prompts/: grounded_answer.md  hyde.md  kg_extract.md  query_router.md
scripts/: TODO.md  run_evaluation.py  search_chunks.py  seed.py
tests/: TODO.md  test_api_foundation.py  test_chat_flow.py  test_contextual_retrieval.py  test_drive_import.py  (+8 more)
(+45 files in other folders)
